@@ -7,6 +7,7 @@ Change log:
 * 0.2 - Not released yet
 - Removed GPS permissions (not intentionally added to begin with)
 - Notification now shows talk show information
+- Music service now runs in the foreground, will help prevent it from getting killed in low memory situations
 
 * 0.1 - July 6th, 2011
 - Initial alpha release
